--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,9 @@
 	--callout-border-rgb: 172, 175, 176;
 	--card-rgb: 180, 185, 188;
 	--card-border-rgb: 131, 134, 135;
+
+	--word-primary: green;
+	--word-secondary: red;
 }
 
 @media (prefers-color-scheme: dark) {
