--- a/src/components/Download.module.css
+++ b/src/components/Download.module.css
@@ -1,16 +1,27 @@
 .content {
 	/* Content area */
 	display: flex;
+
 	justify-content: center;
-	align-items: center;
 	gap: 20px;
 	padding: 20px;
 }
+.block {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 20px;
+}
 
-.link {
+.link,
+.button {
 	padding: 1rem 1.2rem;
 	border-radius: var(--border-radius);
 	background: rgba(var(--card-rgb), 1);
 	border: 1px solid rgba(var(--card-border-rgb), 1);
 	transition: background 200ms, border 200ms;
+}
+
+.button {
+	cursor: pointer;
 }
