--- a/src/components/Word.module.css
+++ b/src/components/Word.module.css
@@ -6,31 +6,9 @@
 	padding: 4rem 0;
 }
 
-.center::before {
-	background: var(--secondary-glow);
-	border-radius: 50%;
-	width: 480px;
-	height: 360px;
-	margin-left: -400px;
-}
-
-.center::after {
-	background: var(--primary-glow);
-	width: 240px;
-	height: 180px;
-	z-index: -1;
-}
-
-.center::before,
-.center::after {
-	content: "";
-	left: 50%;
-	position: absolute;
-	filter: blur(45px);
-	transform: translateZ(0);
-}
 .center p {
 	text-align: center;
+	margin: 5px;
 }
 .familiar {
 	color: var(--word-primary);
@@ -42,10 +20,5 @@
 @media (max-width: 700px) {
 	.center {
 		padding: 8rem 0 6rem;
-	}
-
-	.center::before {
-		transform: none;
-		height: 300px;
 	}
 }
