Change wikipedia defs to wiktionary

--- a/src/components/WordDefinitions.module.css
+++ b/src/components/WordDefinitions.module.css
@@ -1,13 +1,17 @@
 .list {
-	text-align: center;
 	margin: 5px;
+	background: inherit;
+	border: none;
 }
-.pointless {
-	list-style-type: none;
+
+.def {
+	font-style: italic;
 }
+
 .link {
 	text-decoration: underline;
 }
+
 .unfound {
 	text-align: center;
 }
