--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,4 @@
-.description {
+.container {
 	display: inherit;
 	justify-content: inherit;
 	align-items: inherit;
@@ -9,14 +9,13 @@
 	font-family: var(--font-mono);
 }
 
-.description a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 0.5rem;
+.author {
+	position: absolute;
+	right: 10px;
+	top: 10px;
 }
 
-.description p {
+.moto {
 	position: relative;
 	margin: 0;
 	padding: 1rem;
@@ -30,19 +29,19 @@
 		font-size: 0.8rem;
 	}
 
-	.description a {
+	.author {
 		padding: 1rem;
 	}
 
-	.description p,
-	.description div {
+	.moto,
+	.login {
 		display: flex;
 		justify-content: center;
 		position: fixed;
 		width: 100%;
 	}
 
-	.description p {
+	.moto {
 		align-items: center;
 		inset: 0 0 auto;
 		padding: 2rem 1rem 1.4rem;
@@ -58,12 +57,11 @@
 		backdrop-filter: blur(24px);
 	}
 
-	.description div {
+	.login {
 		align-items: flex-end;
 		pointer-events: none;
 		inset: auto 0 0;
 		padding: 2rem;
-		height: 200px;
 		background: linear-gradient(to bottom, transparent 0%, rgb(var(--background-end-rgb)) 40%);
 		z-index: 1;
 	}
