--- a/src/components/Slider/FlipButton.module.css
+++ b/src/components/Slider/FlipButton.module.css
@@ -31,12 +31,14 @@
 }
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
-	.card:focus-visible {
+	.card:focus-visible,
+	.card:focus-within {
 		background: rgba(var(--card-rgb), 0.1);
 		border: 1px solid rgba(var(--card-border-rgb), 0.15);
 	}
 
-	.card:focus-visible span {
+	.card:focus-visible span,
+	.card:focus-within span {
 		transform: scale(1.5);
 	}
 }
