--- a/src/components/WordDefinitions.module.css
+++ b/src/components/WordDefinitions.module.css
@@ -1,5 +1,20 @@
+.container {
+	display: flex;
+	width: 100vw;
+	padding: 20px;
+	justify-content: center;
+	height: 7em;
+	overflow-y: scroll;
+	scrollbar-width: none;
+}
+
+.container:hover .list .def {
+	display: list-item;
+}
+
 .list {
 	margin: 5px;
+	width: 50%;
 	background: inherit;
 	border: none;
 }
@@ -8,10 +23,30 @@
 	font-style: italic;
 }
 
+.def:nth-child(n + 3) {
+	display: none;
+}
+
+.def:nth-child(n + 3):hover {
+	display: block;
+}
+
+.load {
+	margin: 5px;
+	text-align: center;
+	line-height: normal;
+}
+
 .link {
 	text-decoration: underline;
 }
 
+.undecored {
+	list-style-type: none;
+}
+
 .unfound {
+	margin: 5px;
 	text-align: center;
+	line-height: normal;
 }
