--- a/src/components/WordDefinitions.module.css
+++ b/src/components/WordDefinitions.module.css
@@ -23,6 +23,10 @@
 	font-style: italic;
 }
 
+.def:hover {
+	background: rgba(var(--card-rgb), 0.1);
+}
+
 .def:nth-child(n + 3) {
 	display: none;
 }
